# sdkwork-github-workflow

./: .gitattributes  .gitignore  AGENTS.md  README.md  package.json  sdkwork.app.config.json
.github/workflows/: sdkwork-package.yml
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
actions/checkout-dependencies/: action.yml
actions/publish-release/: action.yml
actions/run-lifecycle/: action.yml
actions/setup-toolchains/: action.yml
actions/validate-config/: action.yml
apps/: README.md
crates/sdkwork-api-github-workflow-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-github-workflow-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-github-workflow-assembly/src/: bootstrap.rs  lib.rs
crates/sdkwork-api-github-workflow-standalone-gateway/: Cargo.toml
crates/sdkwork-api-github-workflow-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-github-workflow-standalone-gateway/src/: main.rs
docs/: INDEX.yaml  README.md
docs/design/: sdkwork-github-workflow-framework.md
docs/plans/: 2026-06-06-sdkwork-github-workflow-framework.md
examples/mobile-flutter/: sdkwork.workflow.json
examples/sdkwork-claw-router/: sdkwork.workflow.json
examples/sdkwork-clawrouter/: sdkwork.workflow.json
examples/tablet-cross-platform/: sdkwork.workflow.json
schemas/: sdkwork-workflow.schema.json
scripts/: sdkwork-workflow.mjs  validate-repository.mjs
specs/: README.md  component.spec.json
templates/: app-package.workflow.yml
tests/: sdkwork-workflow.test.mjs
(+4 files in other folders)
