[package]
name = "sdkwork-api-github-workflow-standalone-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread"] }
sdkwork-api-github-workflow-assembly = { path = "../sdkwork-api-github-workflow-assembly" }
